# open-prison-builder

./: .gitignore  .gitmodules  Cargo.toml  README.md  brpc.ps1  build.rs  dump.json  dump1.json  index.html  triangulation.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yaml  static.yaml
assets/shaders/: grid.wgsl  wall.wgsl
atlas/: dirt.rs  grass.rs  mod.rs
credits/: CREDITS.md
generate-texture/: Cargo.toml
generate-texture/src/: dirt.rs  grass.rs  main.rs
pb-assets/: Cargo.toml
pb-assets/src/: lib.rs
pb-assets/tests/: assets.rs
pb-engine/: Cargo.toml  build.rs  out.rs
pb-engine/src/: build.rs  collider.rs  dev.rs  lib.rs  map.rs  picking.rs  rapier.rs  root.rs  save.rs  wall.rs
pb-engine/src/map/: corner.rs  door.rs  hint.rs  mesh.rs  mod.rs  path.rs  perimeter.rs  room.rs  tests.rs  wall.rs
pb-engine/src/map/material/: def.rs  mod.rs
pb-engine/src/map/room/: contents.rs  link.rs  mesh.rs  mod.rs  path.rs  paths.rs
pb-engine/src/pawn/: mod.rs
pb-engine/src/pawn/ai/: mod.rs  path.rs
pb-engine/src/pawn/ai/path/: mod.rs  model.rs  movement.rs
pb-engine/src/pawn/task/: mod.rs  path.rs
pb-engine/src/save/: mod.rs
pb-learn/: Cargo.toml  model.json  model.pb  out.rs  pyproject.toml
pb-learn/model/: Cargo.toml
pb-learn/model/src/: codegen.rs  lib.rs  op.rs
pb-learn/python/: env.py  main.py
pb-learn/python/pb_learn/: __init__.py
pb-learn/src/: env.rs  gym.rs  learn.rs  lib.rs  main.rs  module.rs  ppo.rs  rl_link.rs  rlib.py  tcp_client_inference_env_runner.py
pb-learn/train/: Cargo.toml  env.py  main.py  pyproject.toml  tune.py
pb-learn/train/models/: movement.onnx
pb-learn/train/models/movement/: algorithm_state.pkl  class_and_ctor_args.pkl
pb-learn/train/models/movement/env_runner/: class_and_ctor_args.pkl
pb-learn/train/models/movement/env_runner/env_to_module_connector/: class_and_ctor_args.pkl
pb-learn/train/models/movement/env_runner/module_to_env_connector/: class_and_ctor_args.pkl
pb-learn/train/models/movement/learner_group/: class_and_ctor_args.pkl
pb-learn/train/models/movement/learner_group/learner/: class_and_ctor_args.pkl  state.pkl
pb-learn/train/models/movement/learner_group/learner/rl_module/: class_and_ctor_args.pkl
pb-learn/train/models/movement/learner_group/learner/rl_module/default_policy/: class_and_ctor_args.pkl  module_state.pkl
pb-learn/train/pb_learn_env/: __init__.py
pb-learn/train/src/: lib.rs  map.json  walls.json
pb-map/: Cargo.toml
pb-model/: Cargo.toml  build.rs  out.rs
pb-model/src/: codegen.rs  main.rs  op.rs  tensor.rs
pb-render/: Cargo.toml
pb-render/src/: grid.rs  layer.rs  lib.rs  map.rs  pawn.rs  projection.rs  sprite.rs  wall.rs
pb-render/tests/: render.rs
pb-render/tests/data/empty/: save.json  scene.json
pb-render/tests/data/grid/: scene.json
pb-render/tests/data/wall/: save.json  scene.json
pb-render/tests/diff/: mod.rs
pb-save/: Cargo.toml
pb-save/src/: lib.rs  save.rs  settings.rs
pb-save/src/store/: mod.rs  native.rs  web.rs
pb-store/: Cargo.toml
pb-store/src/: lib.rs  native.rs  web.rs
pb-ui/: Cargo.toml
pb-ui/src/: assets.rs  autosave.rs  camera.rs  input.rs  layout.rs  lib.rs  loading.rs  menu.rs  message.rs  node.rs  startup.rs  theme.rs
pb-ui/src/action/: default.rs  mod.rs
pb-ui/src/input/: camera.rs  cancel.rs  mod.rs  movement.rs  pause.rs  pawn.rs  settings.rs
pb-ui/src/input/action/: mod.rs
pb-ui/src/input/picking/: grid.rs  mod.rs  vertex.rs  wall.rs
pb-ui/src/input/picking/collider/: mod.rs  wall.rs
pb-ui/src/input/picking/physics/: corner.rs  mod.rs  pawn.rs  wall.rs
pb-ui/src/input/picking/point/: grid.rs  mod.rs
pb-ui/src/menu/: mod.rs  saves.rs
pb-ui/src/ribbon/: mod.rs  pawn.rs  wall.rs
pb-ui/src/ribbon/architect/: mod.rs  pawn.rs  wall.rs
pb-ui/src/ribbon/architect/map/: add_door.rs  add_wall.rs  mod.rs  remove_wall.rs
pb-ui/src/ribbon/architect/wall/: add.rs  mod.rs  remove.rs
pb-ui/src/ribbon/dev_tools/: mod.rs  path_stress_test.rs
pb-ui/src/widget/: button.rs  disabled.rs  error.rs  form.rs  input.rs  mod.rs  panel.rs  spinner.rs
pb-util/: Cargo.toml
pb-util/src/: callback.rs  event.rs  lib.rs  math.rs  rng.rs  system.rs
src/: ai.rs  assets.rs  camera.rs  commands.rs  creature.rs  diagnostic.rs  lib.rs  loading.rs  main.rs  map.rs  material.rs  menu.rs  theme.rs  window.rs
src/control/: action.rs  camera.rs  mod.rs
src/map/: material.rs  mod.rs  wireframe.rs
src/ui/: app_bar.rs  button.rs  main_menu.rs  menu_bar.rs  mod.rs  spinner.rs
