[package]
name = "open-prison-builder"
version = "0.1.0"
publish = false
license = "GPL-3.0"
authors = ["Andrew Hickman <me@andrewhickman.dev>"]
edition = "2024"
exclude = ["dist", "build", "assets"]
build = "build.rs"

[workspace]
members = ["pb-assets", "pb-engine", "pb-learn/model", "pb-learn/train", "pb-render", "pb-store", "pb-ui", "pb-util"]

[[bin]]
name = "pb"
path = "src/main.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/default_font",
    "bevy/bevy_remote",
    "bevy/track_location",
]
dev-dylib = ["bevy/dynamic_linking"]
dev-engine = ["pb-engine/dev"]

[dependencies]
pb-engine = { path = "pb-engine" }
pb-render = { path = "pb-render" }
pb-ui = { path = "pb-ui" }
bevy = { version = "0.16.0", default-features = false, features = [
    "default_font",
    "sysinfo_plugin",
    "configurable_error_handler",
    "bevy_asset",
    "bevy_render",
    "bevy_winit",
    "multi_threaded",
    "png",
    "ktx2",
    "webgl2",
    "x11",
    "zstd",
    "web",
] }
image = { version = "0.25.0", default-features = false, features = ["png"] }
winit = { version = "0.30.0", default-features = false }
pb-assets = { version = "0.1.0", path = "pb-assets" }
pb-store = { version = "0.1.0", path = "pb-store" }
pb-util = { version = "0.1.0", path = "pb-util" }

[build-dependencies]
embed-resource = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.2", features = ["wasm_js"] }
web-sys = { version = "0.3.69", features = ["Storage", "Window"] }
