[package]
name = "pb-assets"
version = "0.1.0"
authors = ["Andrew Hickman <me@andrewhickman.dev>"]
publish = false
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_asset",
    "bevy_image",
    "bevy_text",
    "bevy_window",
    "png"
] }
