[package]
name = "pb-engine"
version = "0.1.0"
authors = ["Andrew Hickman <me@andrewhickman.dev>"]
publish = false
edition = "2024"
build = "build.rs"

[features]
dev = ["avian2d/debug-plugin", "bevy/bevy_gizmos"]

[dependencies]
anyhow = "1.0.86"
approx = "0.5.1"
avian2d = { git = "https://github.com/Jondolf/avian", default-features = false, features = ["2d", "f32", "parry-f32", "parallel", "bevy_scene"] }
bevy = { version = "0.16.0", default-features = false, features = ["bevy_state", "bevy_scene", "bevy_render"] }
glam = { version = "0.29.3", features = ["approx"] }
matrixmultiply = "0.3.9"
pb-util = { version = "0.1.0", path = "../pb-util" }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.44.1", features = ["sync"] }

[build-dependencies]
anyhow = "1.0.86"
pb-learn-model = { version = "0.1.0", path = "../pb-learn/model" }
