[package]
name = "pb-engine"
version = "0.1.0"
authors = ["Andrew Hickman <me@andrewhickman.dev>"]
publish = false
edition = "2024"

[features]
dev = ["avian2d/debug-plugin", "bevy/bevy_gizmos"]

[dependencies]
approx = "0.5.1"
avian2d = { version = "0.3.0", default-features = false, features = ["2d", "f32", "parry-f32", "parallel", "bevy_scene"] }
bevy = { version = "0.16.0", default-features = false, features = ["bevy_state", "bevy_scene", "bevy_render", "bevy_gizmos"] }
glam = { version = "0.29.3", features = ["approx", "serde"] }
matrixmultiply = "0.3.9"
pb-util = { version = "0.1.0", path = "../pb-util" }
polyanya = { version = "0.13.0", features = ["no-default-baking"] }
rstar = "0.12.2"
serde = { version = "1.0.203", features = ["derive"] }
smallvec = "1.15.0"
spade = { version = "2.13.1", features = ["serde"] }
tokio = { version = "1.44.1", features = ["sync"] }

[build-dependencies]
pb-learn-model = { version = "0.1.0", path = "../pb-learn/model" }
