[package]
name = "pb-map"
version = "0.1.0"
authors = ["Andrew Hickman <me@andrewhickman.dev>"]
publish = false
edition = "2021"

[dependencies]
bevy = { version = "0.16.0", default-features = false }
pb-util = { version = "0.1.0", path = "../pb-util" }
spade = { version = "2.13.1", features = ["serde"] }
