[package]
name = "pb-render"
version = "0.1.0"
authors = ["Andrew Hickman <me@andrewhickman.dev>"]
publish = false
edition = "2021"

[dependencies]
approx = "0.5.1"
bevy = { version = "0.15.0", default-features = false }
pb-assets = { path = "../pb-assets" }
pb-engine = { path = "../pb-engine" }
pb-util = { version = "0.1.0", path = "../pb-util" }
smallvec = "1.13.2"

[dev-dependencies]
image = "0.25.5"
serde = "1.0.218"
serde_json = "1.0.139"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
