[package]
name = "pb-store"
version = "0.1.0"
authors = ["Andrew Hickman <me@andrewhickman.dev>"]
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bevy = { version = "0.14.0-rc.3", default-features = false, features = ["bevy_scene", "serialize"] }
bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier.git", default-features = false, features = ["dim2"] }
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "serde", "now", "clock", "wasmbind"] }
pb-util = { version = "0.1.0", path = "../pb-util" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
smol_str = { version = "0.2.2", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["Storage", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-fs = "2.1.2"
directories = "5.0.1"
fs-err = "2.11.0"
