[package]
name = "pb-ui"
version = "0.1.0"
authors = ["Andrew Hickman <me@andrewhickman.dev>"]
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bevy = { version = "0.14.0-rc.3", default-features = false, features = ["bevy_render", "bevy_ui", "bevy_state"] }
bevy_mod_picking = { version = "0.20.0-rc.0", default-features = false, features = ["selection", "backend_bevy_ui"] }
bevy_simple_text_input = { git = "https://github.com/rparrett/bevy_simple_text_input.git", branch = "bevy-0.14" }
pb-assets = { version = "0.1.0", path = "../pb-assets" }
pb-engine = { path = "../pb-engine" }
pb-render = { path = "../pb-render" }
pb-store = { version = "0.1.0", path = "../pb-store" }
pb-util = { version = "0.1.0", path = "../pb-util" }
serde = { version = "1.0.203", features = ["derive"] }
smol_str = { version = "0.2.2", features = ["serde"] }
webbrowser = "1.0.1"
