[package]
name = "pb-ui"
version = "0.1.0"
authors = ["Andrew Hickman <me@andrewhickman.dev>"]
publish = false
edition = "2024"

[dependencies]
approx = "0.5.1"
avian2d = { git = "https://github.com/Jondolf/avian", default-features = false }
bevy = { version = "0.16.0", default-features = false, features = ["bevy_render", "bevy_ui", "bevy_ui_picking_backend", "bevy_sprite_picking_backend", "bevy_state"] }
bevy_simple_text_input = { version = "0.11.0" }
pb-assets = { version = "0.1.0", path = "../pb-assets" }
pb-engine = { path = "../pb-engine" }
pb-render = { path = "../pb-render" }
pb-store = { version = "0.1.0", path = "../pb-store" }
pb-util = { version = "0.1.0", path = "../pb-util" }
rand = { version = "0.9.1" }
serde = { version = "1.0.203", features = ["derive"] }
smol_str = { version = "0.2.2", features = ["serde"] }
webbrowser = { version = "1.0.1", features = ["hardened"] }
