[package]
name = "pb-util"
version = "0.1.0"
authors = ["Andrew Hickman <me@andrewhickman.dev>"]
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86" }
approx = "0.5.1"
bevy = { version = "0.15.0", default-features = false, features = ["bevy_state", "bevy_render", "bevy_asset"] }
crossbeam-channel = "0.5.13"
tracing = "0.1.40"
uuid = "1.11.0"
