[package]
name = "pb-util"
version = "0.1.0"
authors = ["Andrew Hickman <me@andrewhickman.dev>"]
publish = false
edition = "2024"

[dependencies]
approx = "0.5.1"
bevy = { version = "0.16.0", default-features = false, features = ["bevy_state", "bevy_render", "bevy_asset", "bevy_log"] }
crossbeam-channel = "0.5.13"
tracing = "0.1.40"
